--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ paginate_path: "/blog/page:num/"
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/profile.jpg"
+avatar: "/assets/img/dp.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour here.
 round-avatar: true
