--- a/_config.yml
+++ b/_config.yml
@@ -89,8 +89,8 @@ navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-border-col: "#EAEAEA"
 page-col: "#FFFFFF"
-link-col: "#F70505"
-hover-col: "#FA0000"
+link-col: "##FAACAC"
+hover-col: "#B5BFEB"
 footer-col: "#F5F5F5"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
