--- a/_config.yml
+++ b/_config.yml
@@ -27,14 +27,14 @@ paginate_path: "/blog/page:num/"
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/logo.png"
+avatar: "/assets/img/dp.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour here.
 round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/assets/img/dp.png"
+title-img: "/assets/img/logo.png"
 
 
 # --- Footer options --- #
