--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ navbar-text-col: "#404040"
 navbar-border-col: "#EAEAEA"
 page-col: "#FFFFFF"
 link-col: "##FAACAC"
-hover-col: "#B5BFEB"
+hover-col: "#f75c5c"
 footer-col: "#F5F5F5"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
