--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- Basic options --- #
 
 # Name of website
-title: Murugesh
+title: Murugesh - Personal Portfolio
 
 # Short description of your site
-description: Personal Portfolio
+description: My digital world
 
 # Your name to show in the footer
 author: Murugesh Manthiramoorthi
