--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ title-img: "/assets/img/logo.png"
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "murugesh2401@gmail.com"
+  email: "murugesh.tbs@outlook.com"
   facebook: murugeshmanthiramoorthi
   github: murugeshmanthiramoorthi
   twitter: murugesh__m
