--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ navbar-links:
   Blog: "blog"
   Accomplishments: "accomplishments"
   Other links:
-   - Skills: "skills"
+#   - Skills: "skills"
    - Community: "community"
    - Certifications: "certifications"
 
