--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Murugesh - Personal Portfolio
 
 # Short description of your site
-description: My digital world
+description: The home to all my thoughts, ideas and works spread across the internet. 
 
 # Your name to show in the footer
 author: Murugesh Manthiramoorthi
@@ -14,7 +14,7 @@ author: Murugesh Manthiramoorthi
 navbar-links:
   About Me: "aboutme"
   Projects: "projects"
-  Blog: "blog"
+#   Blog: "blog"
   Accomplishments: "accomplishments"
   Other links:
 #   - Skills: "skills"
@@ -88,7 +88,7 @@ excerpt_length: 50
 navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-border-col: "#EAEAEA"
-page-col: "#FFFFFF"
+page-col: "#ff9896"
 link-col: "##FAACAC"
 hover-col: "#f75c5c"
 footer-col: "#F5F5F5"
@@ -210,6 +210,3 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
