--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ excerpt_length: 50
 navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-border-col: "#EAEAEA"
-page-col: "#ff9896"
+page-col: "#FF9896"
 link-col: "##FAACAC"
 hover-col: "#f75c5c"
 footer-col: "#F5F5F5"
