--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/assets/img/logo.png"
+title-img: "/assets/img/logo1.png"
 
 
 # --- Footer options --- #
@@ -74,6 +74,7 @@ share-links-active:
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
 # url-pretty: "MyWebsite.com"
+url-pretty: "https://murugeshmanthiramoorthi.github.io/"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
